--- a/App/requirements.txt
+++ b/App/requirements.txt
@@ -1,7 +1,6 @@
 streamlit
+pandas
+ultralytics
+opencv-python
 torch
 torchvision
-numpy
-opencv-python  # If you're using OpenCV for image processing
-import pandas as pd
-import time
